# webtoon_agent

./: .env  .gitattributes  README.md  app.py  database.py  docker-compose.yml  generateimages.py  generateprompts.py  generatestory.py  getdata.py  getdata_test.ipynb  main.py  migrate_db.py  pyproject.toml  requirements.txt  start_server.py  webtoon_randomseed.json  workflow_inpaint_only.json  workflow_normal.json  workflow_sam_inpaint.json
dataset/: make_caption_api.py
dataset/image_json/: LR089121.txt  LR089123.txt  LR089128.txt  LR089132.txt  LR089133.txt  LR089147.txt  LR089152.txt  LR089185.txt  LR089193.txt  LR089198.txt  LR089200.txt  LR089209.txt  LR089211.txt  LR089217.txt  LR089223.txt  LR089229.txt  LR089232.txt  LR089242.txt  LR089246.txt  LR089255.txt  LR089292.txt  LR089296.txt  LR089299.txt  LR089318.txt  LR089326.txt  LR089337.txt  LR089353.txt  LR089380.txt  LR089381.txt  LR089423.txt  LR089425.txt  LR089430.txt  LR089437.txt  LR089441.txt  LR089451.txt  LR089461.txt  LR089469.txt  LR089475.txt  LR089483.txt  LR089511.txt  (+71 more)
postgresql/data/: postmaster.pid
postgresql/data/base/1/: 2619  2838
postgresql/data/base/16384/: 1247  1249  1259  16389  16390_fsm  16390_vm  16394_fsm  16394_vm  16395  16396  16398  16399  16400  16401  16402  16406  16406_fsm  16406_vm  16407  16408  16415  2224  2579  2602  2604  2606  2608  2609  2610  2617  2619  2619_fsm  2619_vm  2620  2654  2656  2657  2658  2659  2662  (+25 more)
postgresql/data/base/4/: 2619  2675
postgresql/data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgresql/data/pg_stat/: pgstat.stat
(+1 files in other folders)
